--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,13 +1,24 @@
 h1 {
-  font-family: Verdana;
   font-size: 50px;
-  color: white;
 }
 body {
   background-color: black;
   text-align: center;
+  font-family: Verdana;
+  color: white;
 }
 a {
   color: aquamarine;
   font-size: 16px;
+}
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+p {
+  font-size: 21px;
+  color: Gray;
+}
+#footer {
+  text-align: right;
 }
